- Some new common use labels to be used in applications. - Fix: Scrollbar when the mouse over last element of a descriptions list with Firefox and Internet Explorer.

--- a/OpenXava/web/style/base.css
+++ b/OpenXava/web/style/base.css
@@ -1924,6 +1924,7 @@ i.ox-sort-indicator2 {
 
 .ui-autocomplete {
     max-height: 350px;
+    padding-bottom: 1px !important; /* In order FF and IE not show scroll on select last item */
     overflow-y: auto;
     overflow-x: hidden;
     border-color: var(--autocomplete-border) !important; 
